--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -5,5 +5,6 @@
     </head>
     <body>
         <h1>Lasagna recipe!</h1>
+        <img src="lasagni.jpg" alt="photo of a well maded lasagna" width="500" height="500">
     </body>
 </html>
