Adding the recipe for the lasagna

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -6,5 +6,23 @@
     <body>
         <h1>Lasagna recipe!</h1>
         <img src="lasagni.jpg" alt="photo of a well maded lasagna" width="500" height="500">
+        <h2>Obviously well made it lasagna for a very formal office potlock</h2>
+        <p>This lasagna its a perfect example of how you do not make a good lasagna, if you want to cook a 
+            perfect lasagna you will need the following ingredients.
+        
+        </p>
+        <ul>
+            <li>1 pound sweet Italian sausage </li>
+            <li>¾ pound lean ground beef </li>
+            <li>½ cup minced onion </li>
+            <li>2 cloves garlic, crushed </li>
+            <li>1 (28 ounce) can crushed tomatoes </li>
+            <li>2 (6 ounce) cans tomato paste </li>
+            <li>2 (6.5 ounce) cans canned tomato sauce </li>
+            <li>½ cup water </li>
+            <li>2 tablespoons white sugar </li>
+            <li>¾ pound mozzarella cheese, sliced </li>
+            <li>12 lasagna noodles </li>
+        </ul>
     </body>
 </html>
