--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -11,6 +11,7 @@
             perfect lasagna you will need the following ingredients.
         
         </p>
+        <h2>ingredients</h2>
         <ul>
             <li>1 pound sweet Italian sausage </li>
             <li>¾ pound lean ground beef </li>
@@ -24,5 +25,15 @@
             <li>¾ pound mozzarella cheese, sliced </li>
             <li>12 lasagna noodles </li>
         </ul>
+        <h2>Steps!</h2>
+        <ol>
+            <li>In a Dutch oven, cook sausage, ground beef, onion, and garlic over medium heat until well browned. Stir in crushed tomatoes, tomato paste, tomato sauce, and water. Season with sugar, basil, fennel seeds, Italian seasoning, 1 teaspoon salt, pepper, and 2 tablespoons parsley. Simmer, covered, for about 1 1/2 hours, stirring occasionally.</li>
+            <li>Bring a large pot of lightly salted water to a boil. Cook lasagna noodles in boiling water for 8 to 10 minutes. Drain noodles, and rinse with cold water. In a mixing bowl, combine ricotta cheese with egg, remaining parsley, and 1/2 teaspoon salt.</li>
+            <li>Preheat oven to 375 degrees F (190 degrees C).</li>
+            <li>To assemble, spread 1 1/2 cups of meat sauce in the bottom of a 9x13-inch baking dish. Arrange 6 noodles lengthwise over meat sauce. Spread with one half of the ricotta cheese mixture. Top with a third of mozzarella cheese slices. Spoon 1 1/2 cups meat sauce over mozzarella, and sprinkle with 1/4 cup Parmesan cheese. Repeat layers, and top with remaining mozzarella and Parmesan cheese. Cover with foil: to prevent sticking, either spray foil with cooking spray, or make sure the foil does not touch the cheese.</li>
+            <li>Bake in preheated oven for 25 minutes. Remove foil, and bake an additional 25 minutes. Cool for 15 minutes before serving.</li>
+        </ol>
+        <h2>Boula!!</h2>
+        <img src="cool.gif" alt="pretty gif of a delicious lasagna">
     </body>
 </html>
